# diia-test-task-worker

./: .gitignore  Dockerfile  Dockerfile.cron  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
postgres-scripts/: init_db.sql
scripts/: crontab  run-main.sh
src/: data_source_handlers.py  date_helper.py  db_handlers.py  main.py  transformers.py
